[gd_scene load_steps=21 format=3 uid="uid://dgwn1k3hj64ky"]

[ext_resource type="Script" path="res://UpgradeManager.gd" id="1_ggryc"]
[ext_resource type="FontFile" uid="uid://v3swnsgchgpo" path="res://Font/BebasNeue-Regular.ttf" id="1_wamc0"]
[ext_resource type="Texture2D" uid="uid://dlnoinldm6hsc" path="res://Backgrounds/hotel-7188496_1280.png" id="2_fvq32"]
[ext_resource type="PackedScene" uid="uid://cu68tjuxmh1jm" path="res://upgrade_panel.tscn" id="3_6h7fh"]
[ext_resource type="Texture2D" uid="uid://c2uxtm0wqitob" path="res://Sprites/bumper.png" id="4_so1vs"]
[ext_resource type="Texture2D" uid="uid://qd8kwolarekd" path="res://Sprites/gas_can.png" id="5_wtaki"]
[ext_resource type="Texture2D" uid="uid://b0kv3u1mresai" path="res://Sprites/gas tank size.png" id="6_ngv77"]
[ext_resource type="Texture2D" uid="uid://benq1wbsfjq7c" path="res://Sprites/carhorn.png" id="7_nnplm"]
[ext_resource type="FontFile" uid="uid://ydwn4indox68" path="res://Font/Bangers-Regular.ttf" id="7_ux1ap"]
[ext_resource type="Texture2D" uid="uid://bmlasb071pto3" path="res://Sprites/Cash.png" id="10_uwlg6"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_o4ka0"]
texture = ExtResource("2_fvq32")
modulate_color = Color(0.631373, 0.631373, 0.631373, 0.537255)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gethg"]
content_margin_left = 12.0
content_margin_top = 8.0
content_margin_right = 12.0
content_margin_bottom = 8.0
bg_color = Color(0.1763, 0.26978, 0.41, 0.952941)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.1484, 0.1428, 0.21, 1)
border_blend = true
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxLine" id="StyleBoxLine_sby42"]
color = Color(0.239216, 0.345098, 0.513726, 0.356863)
thickness = 5

[sub_resource type="FontVariation" id="FontVariation_sc816"]
base_font = ExtResource("1_wamc0")
spacing_top = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0qnkp"]
content_margin_top = 7.0
bg_color = Color(0.233925, 0.233925, 0.233925, 1)
border_width_left = 2
border_width_top = 3
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.162066, 0.162066, 0.162065, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
shadow_color = Color(0.101961, 0.101961, 0.101961, 0.682353)
shadow_size = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pfo6p"]
bg_color = Color(1, 0, 0, 1)
border_width_left = 2
border_width_top = 3
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.162066, 0.162066, 0.162065, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
expand_margin_left = 1.0
expand_margin_top = 3.0
expand_margin_right = 1.0
shadow_color = Color(0.101961, 0.101961, 0.101961, 0.682353)
shadow_size = 1
shadow_offset = Vector2(2, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1si44"]
content_margin_top = 7.0
bg_color = Color(0.97, 0, 0.0161664, 1)
border_width_left = 2
border_width_top = 3
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.162066, 0.162066, 0.162065, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
expand_margin_left = 1.0
expand_margin_right = 1.0
shadow_color = Color(0.101961, 0.101961, 0.101961, 0.682353)
shadow_size = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_koe2n"]
bg_color = Color(1, 0.1, 0.1, 0.85098)
border_width_left = 2
border_width_top = 3
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.162066, 0.162066, 0.162065, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
expand_margin_top = 3.0
shadow_color = Color(0.101961, 0.101961, 0.101961, 0.682353)
shadow_size = 1
shadow_offset = Vector2(2, 2)

[sub_resource type="Shader" id="Shader_vsp3i"]
code = "shader_type canvas_item;

uniform vec4 color : source_color = vec4(1.0);
uniform float width : hint_range(0, 50) = 1.0;
uniform int pattern : hint_range(0, 2) = 0; // diamond, circle, square
uniform bool inside = false;
uniform bool add_margins = true; // only useful when inside is false

void vertex() {
	if (add_margins) {
		VERTEX += (UV * 2.0 - 1.0) * width;
	}
}

bool hasContraryNeighbour(vec2 uv, vec2 texture_pixel_size, sampler2D texture) {
	for (float i = -ceil(width); i <= ceil(width); i++) {
		float x = abs(i) > width ? width * sign(i) : i;
		float offset;
		
		if (pattern == 0) {
			offset = width - abs(x);
		} else if (pattern == 1) {
			offset = floor(sqrt(pow(width + 0.5, 2) - x * x));
		} else if (pattern == 2) {
			offset = width;
		}
		
		for (float j = -ceil(offset); j <= ceil(offset); j++) {
			float y = abs(j) > offset ? offset * sign(j) : j;
			vec2 xy = uv + texture_pixel_size * vec2(x, y);
			
			if ((xy != clamp(xy, vec2(0.0), vec2(1.0)) || texture(texture, xy).a <= 0.0) == inside) {
				return true;
			}
		}
	}
	
	return false;
}

void fragment() {
	vec2 uv = UV;
	
	if (add_margins) {
		vec2 texture_pixel_size = vec2(1.0) / (vec2(1.0) / TEXTURE_PIXEL_SIZE + vec2(width * 2.0));
		
		uv = (uv - texture_pixel_size * width) * TEXTURE_PIXEL_SIZE / texture_pixel_size;
		
		if (uv != clamp(uv, vec2(0.0), vec2(1.0))) {
			COLOR.a = 0.0;
		} else {
			COLOR = texture(TEXTURE, uv);
		}
	} else {
		COLOR = texture(TEXTURE, uv);
	}
	
	if ((COLOR.a > 0.0) == inside && hasContraryNeighbour(uv, TEXTURE_PIXEL_SIZE, TEXTURE)) {
		COLOR.rgb = inside ? mix(COLOR.rgb, color.rgb, color.a) : color.rgb;
		COLOR.a += (1.0 - COLOR.a) * color.a;
	}
}"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wxqkg"]
shader = SubResource("Shader_vsp3i")
shader_parameter/color = Color(0.411765, 1, 0.431373, 0.772549)
shader_parameter/width = 0.607
shader_parameter/pattern = 1
shader_parameter/inside = true
shader_parameter/add_margins = false

[node name="Car Upgrades" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ggryc")

[node name="Background" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_left = -30.0
offset_top = -9.0
offset_right = 1336.0
offset_bottom = 774.0
theme_override_styles/panel = SubResource("StyleBoxTexture_o4ka0")

[node name="Options Menu" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -570.5
offset_top = -287.0
offset_right = 570.5
offset_bottom = 287.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(0, 294)
theme_override_styles/panel = SubResource("StyleBoxFlat_gethg")

[node name="Title" type="Control" parent="Options Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 18.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HorzLine" type="HSeparator" parent="Options Menu/Title"]
custom_minimum_size = Vector2(160, 40)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 23.0
offset_right = -19.0
offset_bottom = 40.0
grow_horizontal = 2
size_flags_vertical = 0
size_flags_stretch_ratio = 5.31
theme_override_styles/separator = SubResource("StyleBoxLine_sby42")

[node name="CarUpgrades" type="Label" parent="Options Menu/Title/HorzLine"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -86.5
offset_top = -26.0
offset_right = 86.5
offset_bottom = 26.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 0
size_flags_stretch_ratio = 0.85
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 4
theme_override_fonts/font = SubResource("FontVariation_sc816")
theme_override_font_sizes/font_size = 40
text = "Car Upgrades"
horizontal_alignment = 1
vertical_alignment = 2

[node name="UpgradeGrid" type="GridContainer" parent="Options Menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -510.0
offset_top = -207.5
offset_right = 510.0
offset_bottom = 207.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 5
columns = 5

[node name="Strong Bumpers" parent="Options Menu/UpgradeGrid" instance=ExtResource("3_6h7fh")]
layout_mode = 2

[node name="Icon" parent="Options Menu/UpgradeGrid/Strong Bumpers/UpgradeContainer/Icon-Title" index="0"]
texture = ExtResource("4_so1vs")

[node name="TuroCharge Engine" parent="Options Menu/UpgradeGrid" instance=ExtResource("3_6h7fh")]
layout_mode = 2

[node name="Title" parent="Options Menu/UpgradeGrid/TuroCharge Engine/UpgradeContainer/Icon-Title" index="1"]
text = "TuroCharge Engine"

[node name="Description" parent="Options Menu/UpgradeGrid/TuroCharge Engine/UpgradeContainer/Icon-Title" index="2"]
text = "Increasees car speed and acceleration."

[node name="Fuel Efficiency" parent="Options Menu/UpgradeGrid" instance=ExtResource("3_6h7fh")]
layout_mode = 2

[node name="Icon" parent="Options Menu/UpgradeGrid/Fuel Efficiency/UpgradeContainer/Icon-Title" index="0"]
texture = ExtResource("5_wtaki")

[node name="Title" parent="Options Menu/UpgradeGrid/Fuel Efficiency/UpgradeContainer/Icon-Title" index="1"]
text = "Fuel Efficiency"

[node name="Description" parent="Options Menu/UpgradeGrid/Fuel Efficiency/UpgradeContainer/Icon-Title" index="2"]
text = "Reduces fuel comsupmtion while driving."

[node name="Fuel Tank Size" parent="Options Menu/UpgradeGrid" instance=ExtResource("3_6h7fh")]
layout_mode = 2

[node name="Icon" parent="Options Menu/UpgradeGrid/Fuel Tank Size/UpgradeContainer/Icon-Title" index="0"]
texture = ExtResource("6_ngv77")

[node name="Title" parent="Options Menu/UpgradeGrid/Fuel Tank Size/UpgradeContainer/Icon-Title" index="1"]
text = "Fuel Tank Size"

[node name="Description" parent="Options Menu/UpgradeGrid/Fuel Tank Size/UpgradeContainer/Icon-Title" index="2"]
text = "Increases fuel tank capacity."

[node name="Car Horn" parent="Options Menu/UpgradeGrid" instance=ExtResource("3_6h7fh")]
layout_mode = 2

[node name="Icon" parent="Options Menu/UpgradeGrid/Car Horn/UpgradeContainer/Icon-Title" index="0"]
texture = ExtResource("7_nnplm")

[node name="Title" parent="Options Menu/UpgradeGrid/Car Horn/UpgradeContainer/Icon-Title" index="1"]
text = "Car Horn"

[node name="Description" parent="Options Menu/UpgradeGrid/Car Horn/UpgradeContainer/Icon-Title" index="2"]
text = "Equips loud horn to scare away other drivers."

[node name="Back Button" type="Button" parent="Options Menu"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -64.0
offset_top = -53.5
offset_right = 66.0
offset_bottom = -12.5
grow_horizontal = 2
grow_vertical = 0
focus_mode = 0
theme_override_colors/font_disabled_color = Color(0.288518, 0.288518, 0.288518, 1)
theme_override_colors/font_hover_color = Color(0.977937, 0.977937, 0.977937, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0.899258, 0.899258, 0.899258, 1)
theme_override_colors/font_outline_color = Color(0.233925, 0.233925, 0.233925, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("7_ux1ap")
theme_override_font_sizes/font_size = 20
theme_override_styles/disabled = SubResource("StyleBoxFlat_0qnkp")
theme_override_styles/hover = SubResource("StyleBoxFlat_pfo6p")
theme_override_styles/pressed = SubResource("StyleBoxFlat_1si44")
theme_override_styles/normal = SubResource("StyleBoxFlat_koe2n")
text = "Done Shopping"

[node name="Cash" type="TextureRect" parent="Options Menu"]
material = SubResource("ShaderMaterial_wxqkg")
layout_mode = 1
anchors_preset = -1
anchor_left = 0.00685187
anchor_top = 0.988038
anchor_right = 0.00685187
anchor_bottom = 0.988038
offset_left = 9.682
offset_top = -37.134
offset_right = 25.682
offset_bottom = -21.134
scale = Vector2(2.9375, 2.07353)
texture = ExtResource("10_uwlg6")

[node name="L_Cash" type="Label" parent="Options Menu/Cash"]
layout_mode = 0
offset_left = 17.3617
offset_top = 0.964539
offset_right = 137.362
offset_bottom = 120.965
scale = Vector2(0.125, 0.125)
theme_override_colors/font_color = Color(1, 0.978132, 0.263246, 0.996078)
theme_override_colors/font_shadow_color = Color(0.223529, 0.219608, 0.258824, 0.666667)
theme_override_constants/shadow_outline_size = 30
theme_override_fonts/font = ExtResource("1_wamc0")
theme_override_font_sizes/font_size = 100
text = "$1000"

[connection signal="pressed" from="Options Menu/Back Button" to="." method="_on_back_button_pressed"]

[editable path="Options Menu/UpgradeGrid/Strong Bumpers"]
[editable path="Options Menu/UpgradeGrid/TuroCharge Engine"]
[editable path="Options Menu/UpgradeGrid/Fuel Efficiency"]
[editable path="Options Menu/UpgradeGrid/Fuel Tank Size"]
[editable path="Options Menu/UpgradeGrid/Car Horn"]
